--- a/androidform/build.gradle
+++ b/androidform/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 
     implementation "com.android.support:appcompat-v7:$project.supportVersion"
+    implementation "com.android.support:cardview-v7:$project.supportVersion"
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
